<resources>

    <!-- Titles -->
    <string name="app_name">FoodMe</string>

    <string name="title_activity_login">Sign in</string>

    <string name="title_kitchen">My Kitchen</string>
    <string name="title_groceries">My Groceries</string>
    <string name="button_undo">undo</string>
    <string name="title_recipes">Recipes</string>
    <string name="kitchen_generate_recipe">Generate Recipes</string>

    <string name="title_shopping_list">Shopping List</string>

    <string name="title_scanner">Scan a Receipt or Barcode</string>
    <string name="scanner_take_photo">Take Picture</string>
    <string name="receipt_add_groceries">Add to My Kitchen</string>

    <string name="title_footprint">Your Carbon Footprint</string>
    <string name="title_footprint_chart">Your Carbon Footprint</string>
    <string name="title_footprint_chart_x_axis">kg of CO2 ekv.</string>
    <string name="footprint_advice">Want Some Advice?</string>
    <string name="title_advice">Advice</string>

    <string name="title_settings">Settings</string>
    <string name="preferences_category_user">User Settings</string>
    <string name="preferences_category_food">Food Preferences</string>
    <string name="logout">Log Out</string>
    <string name="food_preference_key">FOOD_PREFERENCE_KEY</string>
    <string name="food_intolerance_key">FOOD_INTOLERANCE_KEY</string>

    <!-- Bottom Navigation Titles -->
    <string name="nav_title_kitchen">Kitchen</string>
    <string name="nav_title_shopping_list">List</string>
    <string name="nav_title_scanner">Scanner</string>
    <string name="nav_title_footprint">Footprint</string>
    <string name="nav_title_settings">Settings</string>

    <!-- Loading State descriptions -->
    <string name="loading_login">Logging in&#8230;</string>
    <string name="loading_my_kitchen">Fetching Your Groceries&#8230;</string>
    <string name="loading_recipe_list">Generating Recipes&#8230;</string>
    <string name="loading_recipe">Getting Instructions&#8230;</string>
    <string name="loading_shopping_list">Fetching Your Shopping List&#8230;</string>
    <string name="loading_scanning_receipt">Processing Receipt&#8230;</string>
    <string name="loading_footprint">Calculating Footprint&#8230;</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="not_implemented">Functionality not implemented yet&#8230;</string>

</resources>
