<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_food">

        <android.support.v7.preference.DropDownPreference
            android:entries="@array/food_preference_values"
            android:entryValues="@array/food_preference_values"
            android:key="@string/food_preference_key"
            android:title="Food Preference"
            android:summary="Choose your preferred diet"/>

        <android.support.v14.preference.MultiSelectListPreference
            android:entries="@array/food_intolerance_values"
            android:entryValues="@array/food_intolerance_values"
            android:key="@string/food_intolerance_key"
            android:title="Intolerance Preferences"
            android:summary="Select intolerances"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.Preference
        android:title="@string/logout"
        android:key="@string/logout" />

</android.support.v7.preference.PreferenceScreen>
